Wed Aug  7 23:05:55 2013  Akinori MUSHA  <knu@iDaemons.org>

	* ruby.c (Process.setproctitle): New method to change the title of
	  the running process that is shown in ps(1). [Feature #8696]

Wed Aug  7 20:05:38 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_odd_p): Check the bignum length.
	  (rb_big_even_p): Ditto.

Wed Aug  7 19:29:26 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (dbl2big): A condition simplified.

Wed Aug  7 16:34:30 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/webrick/test_cgi.rb (TestWEBrickCGI#{start_cgi_server,test_cgi}):
	  mswin is not only mswin32 but also mswin64. [Bug #8746]

Wed Aug  7 16:19:12 2013  Koichi Sasada  <ko1@atdot.net>

	* cont.c (rb_fiber_start): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

	* proc.c (curry): ditto.

	* proc.c (rb_proc_call): remove line break.

Wed Aug  7 13:20:12 2013  Koichi Sasada  <ko1@atdot.net>

	* random.c (random_load): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

Wed Aug  7 12:58:23 2013  Koichi Sasada  <ko1@atdot.net>

	* thread.c (thread_start_func_2): use RARRAY_RAWPTR() instead of
	  RARRAY_PTR() because there is no new reference.

Wed Aug  7 09:00:24 2013  Zachary Scott  <e@zzak.io>

	* string.c: [DOC] Description of rb_str_equal [Fixes GH-375]
	  Based on a patch by @markijbema
	  https://github.com/ruby/ruby/pull/375

Wed Aug  7 08:30:38 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_hmac.c: [DOC] Documentation for OpenSSL::HMAC
	  based on a patch by @repah documenting-ruby/ruby#14
	  https://github.com/documenting-ruby/ruby/pull/14

Wed Aug  7 07:46:23 2013  Zachary Scott  <e@zzak.io>

	* lib/rss/utils.rb: [DOC] RSS::Utils by Steve Klabnik [Bug #8745]

Wed Aug  7 07:38:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (nlz16): Removed.
	  (nlz32): Ditto.
	  (nlz64): Ditto.
	  (nlz128): Ditto.
	  (nlz_int): New function.
	  (nlz_long): New function.
	  (nlz_long_long): New function.